@@ -10,6 +10,7 @@ Kayen: Implemented SE_LimitSpellClass - Focus Limits spell to pre defined catego
 Kayen: Changed SE_LimitMaxMana to SE_MeleeVulnerability - Weakness/Mitigation verse melee damage
 (Despite lives SPA lable as the former it clearly is not what the effect does from all spell examples)
 Kayen: Updated SE_BardAEDot to no longer damage target while target is moving (consistent with live)
+Kayen: Update SE_InterruptCasting: Will now work for instant spells (as well as over time).
 
 == 06/25/2014 ==
 Kayen: Updated SE_Hate (Renamed from SE_Hate2) to now properly work for instant +/- hate spells.
